syntax = "proto3";

package Services;
import "Models.proto";

message ProdRequest {
    int32 size =1;
}

message ProdListResponse {
    repeated ProdModel data =1;
}


service ProdService {
    rpc GetProdsList(ProdRequest) returns(ProdListResponse);
}